Fix alignment in firefox and safari.
Fixes #6

--- a/assets/main.css
+++ b/assets/main.css
@@ -4,10 +4,7 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 body {
-  display: -webkit-box;   /* OLD - iOS 6-, Safari 3.1-6, BB7 */
-  display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
   display: flex;
-  justify-content: center;
   align-items: center;
   overflow: hidden;
 }
@@ -15,7 +12,8 @@ body {
 canvas {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
 }
 
 #footer {
@@ -35,6 +33,8 @@ canvas {
   box-sizing: border-box;
   overflow: hidden;
   min-width: 290px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .speed {
@@ -71,6 +71,7 @@ canvas {
 #header {
   position: absolute;
   top: 0;
+  left: 0;
   width: 100%;
   padding: 10px;
   color: #989898;
